--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "expo": "~51.0.20",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "^1.14.0",
+    "react-native-maps-directions": "^1.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
